[package]
name = "ctrlflow"
license-file = "LICENSE"
homepage = "https://github.com/Calastrophe/ctrlflow"
repository = "https://github.com/Calastrophe/ctrlflow"
keywords = ["emulator", "tracing", "agnostic"]
description = "An architecture agnostic experimental tracing library for emulators"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
flume = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
