[package]
name = "ctrlflow"
license-file = "LICENSE"
homepage = "https://github.com/Calastrophe/ctrlflow"
repository = "https://github.com/Calastrophe/ctrlflow"
keywords = ["emulator", "tracing", "agnostic"]
description = "An architecture agnostic experimental tracing library for emulators"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
